    - Removed lot entity
    - Added generation of extinguish orders to stock units and unit loads
    - Added filter of goods-receipt material to stock unit and unit load dialogues
    - Complete unit load picking only for unit load types which are valid for shipping
    - Added customer and sender to delivery order
    - Only use unit loads with the shipping-flag set for complete picking operation
    - Manual creation of shipping order is limited to one client
    - Made the type of the InventoryJournal accessable for filters.
    - Added optional check digits to sequences
    - Configurable zone overflow path
    - Propagate address and carrier to pickingorders, shippingorders and packets
    - Weight and volume of outgoing orders are calculated on the fly. No redundant storage.
    - Dimensions (height,width,depth) got 3 decimals for mm


    Technical changes (for details have a look to the git repository)
    -------------------------------------------------------------------------------
    - Reduce the amount of translation helper classes
    - Changed user-name to user-reference in InventoryJournal. It's better for pseudonymization.


    Bugfixes (for details and complete list have a look to the git repository)
    -------------------------------------------------------------------------------
    - Enabled address editing in rich client


    Switch to Release 2.5
    -------------------------------------------------------------------------------
    - Upgrade existing database structures manually. Automatic upgrade of the structure of existing databases may not work.
    - The InventoryJournal has changed. Update the operator_id column with the id of the User whose name is in the old operator column
    - The InventoryJournal has changed. The datatype of the recordtype column is changed from varchar to integer. Manually update the values based on the defined values in InventoryJournalRecordType

